--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux-mock-store": "^1.3.0",
     "redux-observable": "^0.17.0",
     "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
     "rxjs": "^5.5.2",
     "semantic-ui-react": "^0.75.0"
   },
